test/error_quality_fixtures/parse/if_missing_then.out
cmd: medaka check
exit: 1
---
test/error_quality_fixtures/parse/if_missing_then.mdk:2:0: Parse error
