test/error_quality_fixtures/parse/if_missing_then.mdk
main =
  if True
    println "yes"
